lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {

	var c = 0
	var p:Point = new Point(0,0);
	p.x;
	while ( c <  getSol.length)
	{
		
		
		c = c + 1
	}

	return  ((0.1, 5.1),(2.1,5.7))
}
